# spacevagabond

./: Cargo.toml
src/: game.rs  gfx.rs  main.rs  player.rs
src/gpu/: main_pipeline.rs  mesh.rs  mod.rs  render_context.rs
src/gpu/pipelines/: _debug.rs  default.rs
src/gpu/pipelines/shaders/: default.frag  default.vert  default.vert.spv
src/gpu/shaders/: main.frag.spv  main.vert  main.vert.spv
